--- a/example/build.gradle
+++ b/example/build.gradle
@@ -17,7 +17,7 @@ android {
 
     defaultConfig {
         applicationId 'net.ypresto.scabbard.example'
-        minSdkVersion 4
+        minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
         versionName '1.0'
@@ -35,6 +35,7 @@ dependencies {
     compile 'javax.annotation:jsr250-api:1.0'
     compile 'com.google.dagger:dagger:2.0.1'
     compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     compile project(':lib')
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
