--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,4 +1,14 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.novoda:bintray-release:0.3.4'
+    }
+}
+
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 23
@@ -14,6 +24,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+publish {
+    groupId = 'net.ypresto.scabbard'
+    artifactId = 'scabbard'
+    version = '0.1.0-SNAPSHOT'
+    licences = ['Apache-2.0']
+    website = 'https://github.com/ypresto/scabbard'
+    autoPublish = false
+    dryRun = false
 }
 
 dependencies {
